<resources>
    <string name="app_name">BarrelRaceGame</string>
    <string name="app_help">Help</string>
    <string name="app_settings">Settings</string>
    <string name="app_scores">Top Score</string>
    <string name="app_success">You Won</string>

    <string name="app_help_help_heading">Barrel Race Game Help!</string>
    <string name="app_help_how_to_play">How to Play?</string>
    <string name="app_help_step1">1. Start from the starting position</string>
    <string name="app_help_step2">2. Round all the Barrels</string>
    <string name="app_help_step3">3. Return to the start poistion</string>
    <string name="app_help_step4">4. Finish</string>
    <string name="app_help_contact">Contact:</string>
    <string name="app_help_contact_NK1">Nirmallya kundu</string>
    <string name="app_help_contact_NK2">nxkundu@gmail.com</string>



    <string name="action_settings">Settings</string>
    <string name="label_timer">Timer:</string>
    <string name="button_play">Play</string>
    <string name="button_pause">Pause</string>
    <string name="button_reset">Reset</string>
    <string name="button_restart">New Game</string>
    <string name="label_rank">Rank</string>
    <string name="label_score">Time</string>
    <string name="label_player">Player Name</string>
    <string name="success">You Won !</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="default_player_name">Player</string>
    <string name="label_horse_color">Horse Color</string>
    <string name="label_barrel_color">Barrel Color</string>
    <string name="label_game_level">Game Level</string>

    <string name="label_game_level_easy">Easy</string>
    <string name="label_game_level_medium">Medium</string>
    <string name="label_game_level_difficult">Difficult</string>

    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_magneta">Magneta</string>

    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_white">White</string>

    <string name="label_game_progress">1% Completed</string>

</resources>
