<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.utdallas.nxkundu.barrelracegame.HelpActivity"
    android:layout_marginStart="15dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="24dp"
        android:text="@string/app_help_help_heading"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="89dp"
        android:text="@string/app_help_how_to_play"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_help_step1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_help_step2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="186dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_help_step3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="223dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_help_step4"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="258dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_help_contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="333dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_help_contact_NK1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="396dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_help_contact_NK2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="426dp" />
</LinearLayout>
