<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.utdallas.nxkundu.barrelracegame.SettingsActivity"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_horse_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/radioButtonHorse">

            <RadioButton
                android:id="@+id/radioButtonHorseGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_green"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButtonHorseYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_yellow"
                android:layout_alignParentTop="true"/>

            <RadioButton
                android:id="@+id/radioButtonHorseMagneta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_magneta"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_barrel_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/radioButtonBarrel">

        <RadioButton
            android:id="@+id/radioButtonBarrelRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="@string/color_red"
            android:layout_marginTop="10dp"/>

        <RadioButton
            android:id="@+id/radioButtonBarrelBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/color_blue" />

        <RadioButton
            android:id="@+id/radioButtonBarrelWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/color_white" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_game_level"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/radioButtonLevel">

        <RadioButton
            android:id="@+id/radioButtonEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="@string/label_game_level_easy"
            android:layout_marginTop="10dp"/>

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/label_game_level_medium" />

        <RadioButton
            android:id="@+id/radioButtonDifficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_game_level_difficult" />

    </RadioGroup>


</LinearLayout>
